--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  font-family: Montserrat;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  display: grid;
+  grid-template-areas: 
+      "aside header"
+      "aside main"
+      "footer footer";
+  grid-template-columns: 330px 2fr;
+  grid-template-rows: auto 100vh auto;
+  background-color: rgb(22,29,49);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+  grid-area: header;
+}
+
+aside {
+  grid-area: aside;
+}
+
+main {
+  grid-area: main;
+}
+
+footer {
+  grid-area: footer;
+}
+
+/* header, aside, main, footer{
+  border: 1px solid blue;
+} */
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+}
+
+
+
+
+.logo {
+  width: 30px;
+}
+
+.perfil {
+  border-radius: 50%;
+  width: 50px;
+}
+
+.topo-esquerdo {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.item-espaco {
+  margin-right: 8px;
+}
+
+.caixa {
+  margin: 25px;
+  border-radius: 8px;
+  padding: 15px;
+  background-color: rgb(40, 48, 70);
+}
+
+.caixa > ul > li {
+  padding: 8px;
+}
+
+.header-perfil {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  /* align-content: center; Not working*/
 }
