--- a/src/components/CaixaMenu/CaixaMenu.css
+++ b/src/components/CaixaMenu/CaixaMenu.css
@@ -3,9 +3,14 @@
     border-radius: 8px;
     padding: 15px;
     background-color: rgb(40, 48, 70);
+    color: var(--cor-texto);
   }
   
   .caixa > ul > li {
     padding: 8px;
   }
   
+
+  .caixa > ul > li > a{
+    color: var(--cor-texto);
+  }
