--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,4 +1,21 @@
 #login {
     background-color: rgb(22,29,49);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--cor-texto);
 }
 
+.field {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    margin-top: 10px;
+}
+
+button {
+    margin: 10px 0px 10px;
+}
